fix body overflow-x scroll

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ body {
   background: var(--dark);
   font-family: var(--font-primary);
   scroll-padding-top: 1rem;
+  overflow-x: hidden;
 }
 
 h1 {
